--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -54,21 +54,15 @@
 }
 
 .LogoSuite__logobar--variant-muted svg,
-.LogoSuite__logobar--variant-muted path {
-  fill: var(--brand-LogoSuite-color-logo-muted);
-}
-
+.LogoSuite__logobar--variant-muted path,
 .LogoSuite__logobar--variant-muted img {
-  filter: var(--brand-LogoSuite-color-logo-filter-muted);
+  filter: var(--brand-LogoSuite-color-logo-muted);
 }
 
 .LogoSuite__logobar--variant-emphasis svg,
-.LogoSuite__logobar--variant-emphasis path {
-  fill: var(--brand-LogoSuite-color-logo-emphasis);
-}
-
+.LogoSuite__logobar--variant-emphasis path,
 .LogoSuite__logobar--variant-emphasis img {
-  filter: var(--brand-LogoSuite-color-logo-filter-emphasis);
+  filter: var(--brand-LogoSuite-color-logo-emphasis);
 }
 
 .LogoSuite--start .LogoSuite__logobar {
