Prose fixes to inline and multi-line code snippets (#614)
* fix multiline prose code block and inline code color in dark mode

* increase padding

* overrides

* fix formatting

--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -217,7 +217,17 @@
   white-space: break-spaces;
   padding: var(--base-size-4) var(--base-size-8);
   border-radius: var(--brand-borderRadius-small);
-  background-color: var(--base-color-scale-indigo-0);
+  background-color: var(--brand-Prose-code-bgColor);
+}
+
+.Prose pre {
+  padding: var(--base-size-16);
+  border-radius: var(--brand-borderRadius-medium);
+  background-color: var(--brand-Prose-code-bgColor);
+}
+
+.Prose pre code {
+  padding: 0;
 }
 
 /* ---------------------------------------------------------- */
