--- a/packages/react/src/river/RiverStoryScroll/RiverStoryScroll.module.css
+++ b/packages/react/src/river/RiverStoryScroll/RiverStoryScroll.module.css
@@ -1,187 +1,422 @@
+html:has(.copilotWorkspacePage) {
+  background-color: var(--base-color-scale-gray-9);
+}
+
+:root {
+}
+
 .RiverStoryScroll {
+  --ease: cubic-bezier(0.22, 0.56, 0.23, 0.89);
+  -webkit-font-smoothing: antialiased;
+  --roundedCorners: clamp(12px, 2vw, 24px);
+  --stackDistance: -25px;
+
+  /* River visual (videos)
+ * UL = unit-less, needed for division in certain scenarios
+ */
+  --visualMaxWidth: 1032px;
+  --visualMaxWidthUL: 1032;
+  --visualMaxHeight: min(690px, 60vh);
+  --visualMaxHeightUL: 690;
   position: relative;
+
+  @media (max-height: 600px) {
+    --visualMaxHeight: 50vh;
+  }
+
+  @media (max-height: 500px) {
+    --visualMaxHeight: 40vh;
+  }
 }
 
 .RiverStoryScroll__inner {
-  --brand-River-spacing-outer: var(--base-size-64);
-
-  display: grid;
-  grid-gap: var(--brand-River-spacing-inner);
-}
-
-.RiverStoryScroll__inner--50-50 {
-  grid-template-columns: [content] 1fr [visual] 1fr;
-}
-
-.RiverStoryScroll__inner--60-40 {
-  grid-template-columns: [content] 4fr [visual] 6fr;
-}
-
-.RiverStoryScroll__inner--align-start {
-  grid-template-areas: 'content visual';
-}
-
-.RiverStoryScroll__inner--align-end {
-  grid-template-areas: 'visual content';
-}
-
-.RiverStoryScroll__item {
-  min-height: 50vh;
-  grid-template-columns: 1fr;
-}
-
-.RiverStoryScroll__visual-inner {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  /* padding: 10% 0; */
-  padding: 20% 0 0;
-  display: grid;
-  align-items: center;
-  height: 600px;
-}
-
-.RiverStoryScroll__item * {
-  opacity: 0.7;
-  transition: opacity var(--brand-animation-easing-default) var(--brand-animation-duration-extended);
-}
-.RiverStoryScroll__item.visible * {
-  opacity: 1;
-}
-.RiverStoryScroll__visual {
-  grid-area: visual;
   position: relative;
 }
 
-.RiverStoryScroll__content {
-  grid-area: content;
-  padding-block-start: 15vh;
-}
-
-.RiverStoryScroll__visual-image {
+.RiverStoryScroll__visual-cover {
   position: absolute;
-  top: 0;
+  left: 0;
   width: 100%;
-  margin-block-start: 10vh;
-
-  opacity: 0;
-  transition: opacity cubic-bezier(0.16, 1, 0.3, 1) var(--brand-animation-duration-extended),
-    transform cubic-bezier(0.16, 1, 0.3, 1) var(--brand-animation-duration-extended);
 }
 
-.RiverStoryScroll__visual-image--active {
-  opacity: 1;
-  z-index: 1;
+.RiverStoryScroll__image {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  z-index: 10;
+  position: relative;
+  border-radius: var(--roundedCorners);
 }
 
-/* 
-START
+.RiverStoryScroll--enabled .RiverStoryScroll__internal-river {
+  grid-template-columns: 1fr;
+  gap: 0;
+}
 
+.RiverStoryScroll--enabled .RiverStoryScroll__internal-river img {
+  display: none;
+}
 
+@media screen and (max-width: 768px) {
+  .RiverStoryScroll {
+    color-scheme: dark;
 
-  
-END
-*/
+    @media (max-height: 720px) {
+      --visualMaxHeight: 55vh;
+    }
 
-/* 
+    --topOffset: calc((100vh - min(664px, 60vh)) / 3);
 
-.River
+    @media (max-width: 542px) {
+      /* --topOffset: calc((100vh - min(664px, 60vh)) / 2);*/
 
-.RiverStoryScroll__visual-image:nth-child(1) {
-  opacity: 1;
-  display: block;
-} */
+      --topOffset: calc((100vh - min(664px, 60vh)) / 5);
+    }
+    /* Spacing above the visual */
+    --availableWidth: calc(100vw - var(--storyScrollPadding) * 2);
+    --relativeVisualHeight: calc(var(--visualMaxHeightUL) / var(--visualMaxWidthUL) * var(--availableWidth));
+    --visualHeight: min(var(--visualMaxHeight), var(--relativeVisualHeight));
+    --visualWidth: calc(var(--visualHeight) * var(--visualMaxWidthUL) / var(--visualMaxHeightUL));
+    --scrollTextHeight: 58vh;
+    --textToVisualPadding: max(5vh, 40px);
 
-/* --------------------------------------------------------------
-    Regular width, tall viewport
-  -------------------------------------------------------------- */
-/* @media screen and (min-width: 768px) and (min-height: 1000px) {
-  .RiverStoryScroll__inner {
-    margin-top: -15vh;
+    --topScrollOffset: calc(var(--visualHeight));
+    --bottomScrollOffset: calc(100vh - var(--topOffset) - var(--visualHeight) - var(--textToVisualPadding));
+
+    --extraBottomSpacing: 70px;
+
+    @media (max-width: 768px) and (min-height: 670px) {
+      --extraBottomSpacing: calc(-1 * (100vh - 100vw) / 5);
+    }
+
+    @media (min-width: 542px) and (max-width: 1028px) and (min-height: 670px) {
+      --extraBottomSpacing: calc(-1 * (100vh - 100vw) / 3);
+    }
+
+    @media (min-width: 542px) {
+      --scrollTextHeight: 42vh;
+    }
+    @media (max-height: 520px) {
+      --scrollTextHeight: 70vh;
+    }
+
+    @media (min-width: 768px) {
+    }
+
+    --storyScrollPadding: min(32px, 5vw);
+
+    @media (min-width: 1028px) {
+      --stackDistance: -30px;
+    }
+
+    @media (max-height: 800px) {
+      --stackDistance: -20px;
+    }
+
+    @media (max-height: 500px) {
+      --stackDistance: -15px;
+    }
+
+    .RiverStoryScroll__visual-container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+    }
+
+    .RiverStoryScroll__tracker {
+      min-height: var(--scrollTextHeight);
+      position: relative;
+      transition: opacity 0.3s var(--ease);
+    }
+
+    .RiverStoryScroll__tracker:has(+ .in-viewport) {
+      opacity: 0;
+    }
+
+    .RiverStoryScroll__tracker.in-viewport + .outside-viewport {
+      opacity: 0;
+    }
+
+    .RiverStoryScroll {
+      max-width: calc(1032px + var(--storyScrollPadding) * 2);
+      margin-top: min(30vw, 22vh);
+      margin-left: auto;
+      margin-right: auto;
+      padding-right: var(--storyScrollPadding);
+      padding-left: var(--storyScrollPadding);
+    }
+
+    .RiverStoryScroll__content-container--below {
+      padding-top: var(--topScrollOffset);
+      padding-bottom: var(--bottomScrollOffset);
+    }
+
+    .RiverStoryScroll__image {
+      height: auto;
+      width: 100%;
+      max-width: var(--visualWidth);
+      border-radius: var(--roundedCorners);
+    }
+
+    .RiverStoryScroll__visual-container-inner {
+      position: sticky;
+      pointer-events: none;
+      top: 0;
+      padding-top: var(--topOffset);
+      margin-top: calc(-1 * var(--topOffset));
+      display: flex;
+      z-index: 1;
+      flex-direction: column;
+      height: 100vh;
+    }
+
+    /* Enhanced styling if dvh is supported */
+    @supports (height: 100dvh) {
+      .RiverStoryScroll__visual-container-inner {
+        height: 100dvh;
+      }
+    }
+
+    .RiverStoryScroll__visual--below {
+      background-image: linear-gradient(
+        180deg,
+        var(--brand-color-canvas-default) calc(var(--topOffset) + var(--visualHeight) + 3px),
+        transparent calc(var(--topOffset) + var(--visualHeight) + var(--textToVisualPadding)),
+        transparent 93%,
+        var(--brand-color-canvas-default) 99%
+      );
+    }
+
+    .RiverStoryScroll__visual--below .story-scroll-text {
+      margin-top: 40px;
+    }
+
+    .tracker-outside-viewport {
+      opacity: 0;
+      display: none;
+    }
+
+    /* Show first visual, even when nothing is visible */
+    .tracker-outside-viewport:nth-child(2) {
+      opacity: 1;
+      display: block;
+    }
+
+    .RiverStoryScroll__visual-scroll-responder {
+      transition: 0.5s var(--ease) transform, 0.5s var(--ease) filter, 0.5s var(--ease) opacity;
+      pointer-events: auto;
+    }
+
+    .tracker-outside-viewport:has(~ .tracker-in-viewport) {
+      position: absolute;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+    }
+
+    .tracker-in-viewport + .tracker-outside-viewport {
+      transform: translateY(calc(var(--stackDistance) * -1)) scale(1.015);
+      position: absolute;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+    }
+
+    .tracker-outside-viewport:has(+ .tracker-in-viewport) {
+      transform: translateY(var(--stackDistance)) scale(0.95);
+      filter: brightness(70%);
+      opacity: 1;
+    }
+
+    .tracker-outside-viewport:has(+ .tracker-outside-viewport + .tracker-in-viewport) {
+      transform: translateY(calc(var(--stackDistance) * 2)) scale(0.9);
+      filter: brightness(50%);
+      opacity: 1;
+    }
+
+    .tracker-outside-viewport:has(+ .tracker-outside-viewport + .tracker-outside-viewport + .tracker-in-viewport) {
+      transform: translateY(calc(var(--stackDistance) * 3)) scale(0.85);
+      filter: brightness(30%);
+      opacity: 1;
+    }
+
+    .tracker-outside-viewport:has(
+        + .tracker-outside-viewport + .tracker-outside-viewport + .tracker-outside-viewport + .tracker-in-viewport
+      ) {
+      transform: translateY(calc(var(--stackDistance) * 4)) scale(0.8);
+      filter: brightness(10%);
+      opacity: 1;
+    }
+
+    .tracker-in-viewport {
+      display: block;
+      position: relative;
+    }
+
+    .video-controls {
+      --distanceFromEdge: 12px;
+      position: absolute;
+      right: calc((100% - var(--visualWidth)) / 2 + var(--distanceFromEdge));
+      bottom: var(--distanceFromEdge);
+      z-index: 10;
+      pointer-events: auto;
+      transition: opacity 0.3s var(--ease);
+      opacity: 0;
+    }
+
+    @media (min-width: 542px) {
+      .video-controls {
+        --distanceFromEdge: 20px;
+      }
+    }
+
+    .RiverStoryScroll__visual-scroll-responder:hover .video-controls,
+    .video-controls-ended {
+      opacity: 1;
+    }
+
+    .video-control {
+      background-color: rgba(0, 0, 0, 0.18);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 200px;
+      width: 44px;
+      height: 44px;
+      transition: background-color 0.2s ease;
+    }
+
+    .video-control:hover,
+    .video-control:focus {
+      background-color: rgba(0, 0, 0, 0.35);
+    }
+
+    .RiverStoryScroll__content-stack {
+      position: sticky;
+      padding-top: var(--textToVisualPadding);
+      top: calc(var(--topOffset) + var(--visualHeight));
+    }
+
+    /* This is a hack to make the sticky behavior exclude the height of itself as it reaches the bottom */
+    /* This makes it possible to calculate the end of the sticky scroll without having to account for text content */
+    .RiverStoryScroll__tracker:last-child .RiverStoryScroll__content-stack {
+      height: 0;
+    }
+
+    .RiverStoryScroll__pagination {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      position: absolute;
+      left: calc((100vw - 100%) / 2 * -1 + min(20px, 1.8vw));
+      right: 0;
+      margin: auto;
+      height: var(--visualHeight);
+      justify-content: center;
+    }
+
+    .RiverStoryScroll__pagination-dot {
+      width: 6px;
+      height: 6px;
+      border-radius: 30px;
+      opacity: 0.55;
+      background: #fff;
+      transition: opacity 0.3s var(--ease), height 0.3s var(--ease);
+    }
+
+    .tracker-in-viewport:nth-child(2) ~ .RiverStoryScroll__pagination .RiverStoryScroll__pagination-dot:nth-child(1) {
+      opacity: 1;
+      height: 24px;
+    }
+
+    .tracker-in-viewport:nth-child(3) ~ .RiverStoryScroll__pagination .RiverStoryScroll__pagination-dot:nth-child(2) {
+      opacity: 1;
+      height: 24px;
+    }
+
+    .tracker-in-viewport:nth-child(4) ~ .RiverStoryScroll__pagination .RiverStoryScroll__pagination-dot:nth-child(3) {
+      opacity: 1;
+      height: 24px;
+    }
+
+    .tracker-in-viewport:nth-child(5) ~ .RiverStoryScroll__pagination .RiverStoryScroll__pagination-dot:nth-child(4) {
+      opacity: 1;
+      height: 24px;
+    }
+
+    .tracker-in-viewport:nth-child(6) ~ .RiverStoryScroll__pagination .RiverStoryScroll__pagination-dot:nth-child(5) {
+      opacity: 1;
+      height: 24px;
+    }
   }
+}
 
-  .RiverStoryScroll__content {
-    padding-block-start: 30vh;
-    padding-block-end: 12vh;
+@media screen and (min-width: 768px) {
+  .copilotWorkspace {
+    padding-block: 100vh;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
   }
-
-  .RiverStoryScroll__visual-inner {
-    height: 100dvh;
-    padding-block-end: 0;
-  }
-} */
-
-/* --------------------------------------------------------------
-    Narrow viewport
-  -------------------------------------------------------------- */
-@media screen and (max-width: 767px) {
   .RiverStoryScroll__inner {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas: 'visual' 'content';
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
   }
 
-  .RiverStoryScroll__content {
+  .RiverStoryScroll__visual-container {
+    position: sticky;
     width: 100%;
-    padding: 0 15px;
-    max-width: 100%;
-    margin-top: 10dvh;
+    top: 0;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    order: 2;
   }
 
-  .RiverStoryScroll__visual {
+  .RiverStoryScroll .RiverStoryScroll__visual-scroll-responder {
     position: sticky;
     top: 0;
-    left: 0;
     width: 100%;
-    padding: var(--base-size-16);
-    padding-top: 48px;
-    max-width: 100%;
-    margin-top: 0;
+    right: 0;
+    transition: opacity 0.3s var(--ease);
+    padding-top: 10vh;
   }
 
-  [data-color-mode='light'] .RiverStoryScroll__visual {
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 86%, rgba(255, 255, 255, 0) 100%);
+  .RiverStoryScroll__visual-container-inner.RiverStoryScroll__visual--below {
+    position: sticky;
+    top: 0;
   }
 
-  [data-color-mode='dark'] .RiverStoryScroll__visual {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 86%, rgba(0, 0, 0, 0) 100%);
+  .RiverStoryScroll__visual-scroll-responder.tracker-outside-viewport {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    opacity: 0;
   }
 
-  .RiverStoryScroll__item * {
+  .RiverStoryScroll__visual-scroll-responder.tracker-in-viewport {
+    z-index: 1;
     opacity: 1;
   }
 
-  .RiverStoryScroll__visual-image {
-    margin-top: 0;
+  .RiverStoryScroll__content-container.RiverStoryScroll__content-container--below {
+    padding-top: 24vh;
   }
 
-  .RiverStoryScroll__visual-inner {
-    height: 47dvh;
-    top: 0;
-    padding: 10% 0;
+  .RiverStoryScroll__content-container.RiverStoryScroll__content-container--below .RiverStoryScroll__tracker {
+    padding: 20vh 0;
   }
 
-  .RiverStoryScroll__visual-image--stacked:nth-child(1) {
-    transform: translateY(calc(-8px * 4)) scale(0.9);
-    z-index: -1;
-    filter: brightness(0.8);
-  }
-  .RiverStoryScroll__visual-image--stacked:nth-child(2) {
-    transform: translateY(calc(-8px * 8)) scale(0.8);
-    z-index: -2;
-
-    filter: brightness(0.8);
-  }
-
-  .RiverStoryScroll__visual-image--stacked:nth-child(3) {
-    transform: translateY(calc(-8px * 12)) scale(0.7);
-    z-index: -4;
-    filter: brightness(0.8);
-  }
-
-  .RiverStoryScroll__visual-image--stacked:nth-child(4) {
-    transform: translateY(calc(-8px * 16)) scale(0.6);
-    z-index: -5;
-    filter: brightness(0.8);
+  .RiverStoryScroll__content-container.RiverStoryScroll__content-container--below
+    .RiverStoryScroll__tracker.outside-viewport
+    * {
+    opacity: 0.7;
   }
 }
