--- a/packages/react/src/Statistic/Statistic.module.css
+++ b/packages/react/src/Statistic/Statistic.module.css
@@ -1,9 +1,3 @@
-.Statistic {
-  display: flex;
-  flex-direction: column;
-  gap: var(--base-size-8);
-}
-
 /**
  * Variants
  */
@@ -79,9 +73,19 @@
   }
 }
 
+.Statistic__heading {
+  font-stretch: 75%;
+}
+
 /*
  * Description
  */
 .Statistic__description--accent {
   color: var(--brand-color-accent-primary);
+}
+
+.Statistic__description {
+  display: block;
+  margin-block-start: var(--base-size-8);
+  font-stretch: normal;
 }
