--- a/packages/react/src/recipes/SolutionTemplates/SolutionPage/SolutionPage.module.css
+++ b/packages/react/src/recipes/SolutionTemplates/SolutionPage/SolutionPage.module.css
@@ -47,6 +47,10 @@
   --brand-Grid-spacing-row: var(--base-size-32);
 }
 
+.breadcrumbsOffset {
+  margin-top: calc(-1 * var(--base-size-96));
+}
+
 /*
  * Hero video glow
  * Opt-in feature. Not officialy-support Primer Brand pattern.
